# gfold

./: .gitignore  Cargo.toml  build-nix-linux.sh  build-nix-osx.sh  devbox.json  shell.nix
lib/libgfold/: Cargo.toml
lib/libgfold/src/: collector.rs  lib.rs  repository_view.rs  status.rs
lib/libgfold/src/collector/: target.rs
src/: args.rs  collector.rs  main.rs  repository_view.rs  status.rs
src/collector/: target.rs
src/display/: color.rs
